# Copperbrain

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  pyproject.toml
benchmark-test3/: benchmark-test3.kicad_dru  benchmark-test3.kicad_pcb  benchmark-test3.kicad_pro  benchmark-test3.kicad_sch
benchmark_bldc_drv8311/: benchmark_bldc_drv8311.kicad_dru  benchmark_bldc_drv8311.kicad_pcb  benchmark_bldc_drv8311.kicad_pro  benchmark_bldc_drv8311.kicad_sch
docs/: ACCEPTANCE.md  DEMO.md  DEVPOST_STORY.md  INSTALLATION.md  WORKSPACE_WIKI.md
scripts/: run_demo.py  setup_dependencies.py
src/copperbrain/: __init__.py  cli.py  config.py  errors.py  models.py  server.py
test_bench_pico/: fp-lib-table  sym-lib-table  test_bench_pico.kicad_dru  test_bench_pico.kicad_pcb  test_bench_pico.kicad_pro  test_bench_pico.kicad_sch
test_bench_pico/copperbrain-libs/: Copperbrain_CSD18540.kicad_sym  Copperbrain_DRV8701.kicad_sym  Copperbrain_THVD1429.kicad_sym
tests/: test_config.py  test_errors.py  test_models.py  test_server.py
tests/adapters/: test_downloads.py  test_footprint_geometry.py  test_freerouting.py  test_jlc_catalog.py  test_kicad_cli.py  test_kicad_detection.py  test_kicad_routing_tools.py  test_library_tables.py  test_pcb_design_adapter.py  test_pcb_layout.py  test_pcb_routing_adapter.py  test_pcb_rules.py  test_repository_updates.py  test_schematic_api.py
tests/e2e/: test_demo_pipeline.py
tests/fixtures/: jlc_catalog.json
tests/integration/: test_grounding_integration.py  test_kicad_workflow.py  test_placement_flip_integration.py  (+1 more)
(+67 files in other folders)
