[project]
name = "copperbrain"
version = "0.1.0"
description = "Safe local MCP server for KiCad schematic and PCB analysis with controlled changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kicad-sch-api==0.5.6",
  "mcp>=1.12,<2",
  "pydantic>=2.10,<3",
  "platformdirs>=4.3,<5",
  "kicad-python>=0.5,<1",
  "numpy>=1.26,<3",
  "scipy>=1.12,<2",
  "shapely>=2,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
copperbrain = "copperbrain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copperbrain"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = ["live: requires external network or installed third-party services"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["copperbrain"]
